--- a/src/app/components/board/board.html
+++ b/src/app/components/board/board.html
@@ -14,9 +14,19 @@
     </div>
     <div class="sudoku-board">
         <div class="row" *ngFor="let row of board; let rowIndex = index">
-            <input *ngFor="let cell of row; let colIndex = index" class="cell" [value]="cell === 0 ? '' : cell"
-                [readOnly]="cell !== 0" [class.prefilled]="cell !== 0" type="text" maxlength="1" pattern="[1-9]"
-                inputmode="numeric" />
+            <input 
+            *ngFor="let cell of row; let colIndex = index" 
+            class="cell" 
+            [value]="cell === 0 ? '' : cell"
+            [disabled]="cell !== 0"
+            [class.prefilled]="cell !== 0" 
+            [tabindex]="cell !== 0 ? -1 : 0"
+            type="text" 
+            maxlength="1" 
+            pattern="[1-9]"
+            inputmode="numeric" 
+            (keydown)="validateInput($event)"
+            /> 
         </div>
     </div>
 </div>
