--- a/src/app/components/board/board.html
+++ b/src/app/components/board/board.html
@@ -31,6 +31,8 @@
         </div>
     </div>
     <div class="actions">
+        <button class="validate-btn" (click)="handleValidate()">Validate</button>
         <button class="solve-btn" (click)="handleSolve()">Solve</button>
     </div>
+    <p class="error-message">{{errorMessage}}</p>
 </div>
