--- a/src/app/components/board/board.css
+++ b/src/app/components/board/board.css
@@ -1,50 +1,82 @@
 .main-container {
     margin: 20px;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .title {
+    margin: auto;
     text-align: center;
+    color: #666;
+    font-size: 1.5rem;
+    max-width: 100%;
 }
 
 .difficulties {
-    width: 375px;
+    margin: auto;
+    max-width: 375px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 30px;
 }
 
 .select-diff-wrapper {
     display: flex;
     flex: 2;
     gap: 10px;
+    flex-wrap: wrap;
+    flex: 2;
 }
 
 .difficulty-title {
     margin: 0;
     padding: 5px 0;
-    font-size: 18px;
+    font-size: 1rem;
+    color: #666;
+    font-weight: bold;
+    flex: 1 1;
 }
 
 .select-difficulty {
     padding: 5px 10px;
     font-size: 15px;
+    color: #666;
+    font-size: 1rem;
+    flex: 2 1;
 }
 
 .new-game-btn {
-    padding: 5px 15px;
-    font-size: 15px;
+    min-width: 120px;
+    flex: 1;
+    box-sizing: border-box;
+    padding: 5px 20px;
+    font-size: 1rem;
+    background-color: #007bff;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    color: white;
+}
+
+.new-game-btn:hover {
+    background-color: rgb(122, 182, 255);
 }
 
 .sudoku-board {
     display: grid;
     grid-template-rows: repeat(9, 1fr);
+    width: 100%;
     max-width: 375px;
     margin: auto;
     border: 4px solid #666;
+    border-radius: 5px;
 }
 
 .row {
@@ -53,11 +85,13 @@
 }
 
 .cell {
-    width: 36px;
-    height: 36px;
+    width: 100%;
+    min-width: 25px;
+    aspect-ratio: 1 / 1;
     text-align: center;
     font-size: 1.2rem;
     border: 1px solid #ccc;
+    box-sizing: border-box;
 }
 
 .cell.prefilled {
@@ -84,18 +118,63 @@
 }
 
 .actions {
+    margin: auto;
+    width: 100%;
     max-width: 375px;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 20px;
+    flex-wrap: wrap;
 }
 
 .actions button {
-    padding: 5px 20px;
-    font-size: 15px;
+    padding: 8px 20px;
+    font-size: 1rem;
+    border-radius: 5px;
+    border: none;
+    color: white;
+    cursor: pointer;
+    min-width: 120px;
+}
+
+.validate-btn {
+    background-color: #007bff;
+}
+
+.validate-btn:hover {
+    background-color: rgb(122, 182, 255);
+}
+
+.solve-btn {
+    background-color: rgb(2, 157, 67);
+}
+
+.solve-btn:hover {
+    background-color: rgb(80, 196, 128);
 }
 
 .error-message {
+    margin: auto;
+    font-size: 1rem;
+    max-width: 375px;
+    text-align: center;
     color: red;
+}
+
+@media (max-width: 458px) {
+
+    .difficulty-title,
+    .select-difficulty {
+        flex-basis: 100%;
+    }
+
+    .actions {
+        gap: 5px;
+    }
+
+    .actions button {
+        flex-basis: 100%;
+        min-width: auto;
+    }
 }
